Changed background to use CSS, fixed font sizes, and got rid of whitespace at bottom (padding issue)

--- a/dashboardstyle.css
+++ b/dashboardstyle.css
@@ -1,11 +1,8 @@
 /*Style Added Soon!*/
-body {
+body,html{
 	font-family: Raleway;
 	color: white;
-}
-img {
-    width:;
-    height: auto;
+	min-height: 100%;
 }
 
 a:hover, a:visited, a:active, a:link{
@@ -13,30 +10,21 @@ a:hover, a:visited, a:active, a:link{
 	text-decoration: none;
 }
 .backgroundDIV {
-	padding-bottom: 70%;
-    width: 100%;
-    height: 100%;
-    background-image: url('jaihkdsv.png');
-    background-repeat: no-repeat;
-    background-size:100% 100%;
+	padding-bottom: 100%;
+	height:100%;
+	width:100%;
+	background: linear-gradient(45deg,#EE3031,#4F3863 50%,#0F3C78);
 }
 
 .explainingDIV {
 	font-family: Raleway;
-	padding-top: 10%;
 	padding-bottom: 10%;
-	padding-right: 10%;
-	padding-left: 10%;
-	width: 750px;
 	margin: auto;
 	text-align: center;
 }
 .main{
 	font-family: Raleway;
 	color: white;
-	padding-top:5%;
-	padding-left: 10%;
-	padding-right:10%;
 	text-align: center;
 }
 .getStartedHowWorks{
@@ -45,13 +33,11 @@ a:hover, a:visited, a:active, a:link{
 }
 .getStartedDIV{
 	font-family: Raleway;
-	width: 750px;
-	margin: auto;
+	width: 50%;
 }
 .bigtext {
 	font-family: Raleway;
 	font-size:500%;
-	padding-top:50px;
 	padding-bottom:1px;
 }
 p{
@@ -116,12 +102,10 @@ padding-right:25%;
 }
 .heading1 {
 	font-size:600%;
-	padding-top:4%;
 	padding-bottom:15px;
 }
 .faq{
 	font-size:150%;
-	padding-top:4%;
 	padding-bottom:15px;
 }
 .btn.btn-default{
