--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 /*Style Added Soon!*/
-body {
+html,body {
 	font-family: Raleway;
 	color: white;
+	height:100%;
+	margin:0;
 }
 img {
     width:contain;
@@ -13,14 +15,9 @@ a:hover, a:visited, a:active, a:link{
 	text-decoration: none;
 }
 .backgroundDIV {
-	padding-bottom: 143%;
-    width: 100%;
-	height: auto;
-    background-image: url('jaihkdsv.png');
-    background-repeat: no-repeat;
-    background-size:cover;
-	padding-bottom:36%;
-    background-size:100% 100%;
+	height:100%;
+	width:100%;
+	background: linear-gradient(45deg,#EE3031,#4F3863 50%,#0F3C78);
 }
 .main{
 	font-family: Raleway;
@@ -39,6 +36,11 @@ a:hover, a:visited, a:active, a:link{
 	width: 750px;
 	margin: auto;
 	text-align: center;
+}
+.subheading{
+	font-family: Raleway;
+	font-size:250%;
+	padding-bottom:15px;
 }
 .getStartedHowWorks{
 	text-align:center;
@@ -119,7 +121,7 @@ padding-right:25%;
 }
 .btn.btn-homepage{
 	color:white;
-	font-size:15px;
+	font-size:200%;
 	text-align:center;
 	background-color: transparent;
 	font-family:Raleway;
